--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     
                 </div>
             </div>
-            <div class="playbar  flex align-center ">
+            <div class="playbar  flex">
                 <span>Song info</span>
                 <div class="player">
                         <img src="previous.svg" class="w-1" alt="previous">
@@ -98,6 +98,11 @@
                 <span>
                     Timer
                 </span>
+                <div class="seekbar">
+                    <div class="circle">
+
+                    </div>
+                </div>
             </div>
             
         </div>
