--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                 </div>
             </div>
             <div class="playbar  flex">
-                <span>Song info</span>
+                <span class="songInfo">Song info</span>
                 <div class="player">
-                        <img src="previous.svg" class="w-1" alt="previous">
-                        <img src="play2.svg" class="w-1" alt="play">
-                        <img src="next.svg" class="w-1" alt="next">
+                        <img src="previous.svg" class="w-1" alt="previous" id="previous">
+                        <img src="pause.svg" class="w-1" alt="play" id="play">
+                        <img src="next.svg" class="w-1" alt="next" id="next">
                 </div>
-                <span>
+                <span class="timer">
                     Timer
                 </span>
                 <div class="seekbar">
