--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="left">
         <div class="home bg-gray rounded">
           <div class="logo">
-            <img class="invert" src="logo.png" alt="" />
+            <img class="invert" src="logo.svg" alt="" />
             <img src="cross.svg" class="invert cross" alt="" />
           </div>
           <ul>
